...
        },
      }}
    >
      <Tabs.Screen
        name="index"
        options={{
          title: 'Início',
          tabBarIcon: ({ color }) => <HomeIcon color={color} size={26} />,
        }}
      />
      <Tabs.Screen
        name="map"
        options={{
...
